--- a/webroot/css/output.css
+++ b/webroot/css/output.css
@@ -653,9 +653,6 @@
   .text-primary-600 {
     color: var(--color-primary-600);
   }
-  .text-red-600 {
-    color: var(--color-red-600);
-  }
   .text-rose-700 {
     color: var(--color-rose-700);
   }
@@ -1031,6 +1028,22 @@
     padding-block: calc(var(--spacing) * 2);
     color: var(--color-red-800);
   }
+  .flash-info {
+    margin-bottom: calc(var(--spacing) * 3);
+    display: flex;
+    align-items: center;
+    gap: calc(var(--spacing) * 2);
+    border-radius: 0.25rem;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-blue-200);
+    background-color: var(--color-blue-50);
+    padding-inline: calc(var(--spacing) * 3);
+    padding-block: calc(var(--spacing) * 2);
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+    color: var(--color-blue-800);
+  }
   .flash-success, .flash-error {
     display: flex;
     align-items: flex-start;
@@ -1121,21 +1134,42 @@
   .dl-seznam dt:nth-child(4n+1), .dl-seznam dd:nth-child(4n+2) {
     background-color: var(--color-slate-50);
   }
-  .flash-info {
-    margin-bottom: calc(var(--spacing) * 3);
+  .checkbox {
     display: flex;
     align-items: center;
     gap: calc(var(--spacing) * 2);
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .checkbox input[type="checkbox"] {
+    height: calc(var(--spacing) * 4);
+    width: calc(var(--spacing) * 4);
     border-radius: 0.25rem;
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-    border-color: var(--color-blue-200);
-    background-color: var(--color-blue-50);
-    padding-inline: calc(var(--spacing) * 3);
-    padding-block: calc(var(--spacing) * 2);
+    border-color: var(--color-slate-300);
+    color: var(--color-primary-600);
+    &:focus {
+      --tw-ring-color: var(--color-primary-500);
+    }
+  }
+  .checkbox label {
+    cursor: pointer;
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
-    color: var(--color-blue-800);
+    color: var(--color-slate-700);
+  }
+  .checkbox:hover {
+    border-radius: var(--radius-md);
+    background-color: var(--color-slate-50);
+  }
+  .bt-checkbox-group {
+    max-height: calc(var(--spacing) * 64);
+    overflow-y: auto;
+    border-radius: var(--radius-md);
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-slate-200);
+    background-color: var(--color-white);
+    padding-inline: calc(var(--spacing) * 3);
+    padding-block: calc(var(--spacing) * 2);
   }
 }
 @property --tw-space-y-reverse {
